--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Demo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div class="app">
+    <header class="header">
+        <img class="logo" src="logo.png" alt="">
+    </header>
+
+    <div class="clock">
+        12:11:20 PM
+    </div>
+
+    <div class="lots">
+        <article class="lot">
+            <div class="price">16</div>
+            <h1>Apple</h1>
+            <p>Apple description</p>
+        </article>
+        <article class="lot">
+            <div class="price">41</div>
+            <h1>Orange</h1>
+            <p>Orange description</p>
+        </article>
+    </div>
+</div>
 
 </body>
 </html>
