--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,16 @@
 
     // ##########################
 
+    setInterval(() => {
+        const time = new Date()
+
+        const clock = document.getElementById('root').querySelector('.app > .clock')
+
+        clock.innerText = time.toLocaleTimeString()
+    }, 1000)
+
+    // ##########################
+
     function render (newDom, realDomRoot) {
         realDomRoot.append(newDom)
     }
