--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,23 @@
     function Clock ({ time }) {
         const node = document.createElement('div')
         node.className = 'clock'
-        node.innerText = time.toLocaleTimeString()
+
+        const value = document.createElement('span')
+        value.className = 'value'
+        value.innerText = time.toLocaleTimeString()
+
+        node.append(value)
+
+        const icon = document.createElement('span')
+
+        if (time.getHours() >= 7 && time.getHours() <= 21) {
+            icon.className = 'icon day'
+        } else {
+            icon.className = 'icon night'
+        }
+
+        node.append(icon)
+
         return node
     }
 
@@ -108,9 +124,12 @@
     setInterval(() => {
         const time = new Date()
 
-        const clock = document.getElementById('root').querySelector('.app > .clock')
+        const app = document.getElementById('root').querySelector('.app')
 
-        clock.innerText = time.toLocaleTimeString()
+        const clock = app.querySelector('.clock')
+        const newClock = Clock({ time })
+
+        app.replaceChild(newClock, clock)
     }, 1000)
 
     // ##########################
