--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <script>
     // ##########################
 
-    const state = {
+    let state = {
         time: new Date(),
         lots: [
             {
@@ -122,19 +122,22 @@
     // ##########################
 
     setInterval(() => {
-        const time = new Date()
+        state = {
+            ...state,
+            time: new Date()
+        }
 
-        const app = document.getElementById('root').querySelector('.app')
+        const newApp = App({ state })
 
-        const clock = app.querySelector('.clock')
-        const newClock = Clock({ time })
-
-        app.replaceChild(newClock, clock)
+        const root = document.getElementById('root')
+        root.innerHTML = ''
+        root.append(newApp)
     }, 1000)
 
     // ##########################
 
     function render (newDom, realDomRoot) {
+        realDomRoot.innerHTML = ''
         realDomRoot.append(newDom)
     }
 
