--- a/public/index.html
+++ b/public/index.html
@@ -127,11 +127,10 @@
             time: new Date()
         }
 
-        const newApp = App({ state })
-
-        const root = document.getElementById('root')
-        root.innerHTML = ''
-        root.append(newApp)
+        render(
+            App({ state }),
+            document.getElementById('root')
+        )
     }, 1000)
 
     // ##########################
