--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,14 @@
 
     // ##########################
 
-    render(
-        App({ state }),
-        document.getElementById('root')
-    )
+    function renderView (state) {
+        render(
+            App({ state }),
+            document.getElementById('root')
+        )
+    }
+
+    renderView(state)
 
     // ##########################
 
@@ -127,10 +131,7 @@
             time: new Date()
         }
 
-        render(
-            App({ state }),
-            document.getElementById('root')
-        )
+        renderView(state)
     }, 1000)
 
     // ##########################
