--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,39 @@
 <script>
     // ##########################
 
+    const api = {
+        get (url) {
+            switch (url) {
+                case '/lots':
+                    return new Promise((resolve) => {
+                        setTimeout(() => {
+                            resolve([
+                                {
+                                    id: 1,
+                                    name: 'Apple',
+                                    description: 'Apple description',
+                                    price: 16
+                                },
+                                {
+                                    id: 2,
+                                    name: 'Orange',
+                                    description: 'Orange description',
+                                    price: 41
+                                }
+                            ])
+                        }, 1000)
+                    })
+                default:
+                    throw new Error('Unknown address')
+            }
+        }
+    }
+
+    // ##########################
+
     let state = {
         time: new Date(),
-        lots: [
-            {
-                id: 1,
-                name: 'Apple',
-                description: 'Apple description',
-                price: 16
-            },
-            {
-                id: 2,
-                name: 'Orange',
-                description: 'Orange description',
-                price: 41
-            }
-        ]
+        lots: null
     }
 
     // ##########################
@@ -82,6 +99,14 @@
     }
 
     function Lots ({ lots }) {
+
+        if (lots === null) {
+            const node = document.createElement('div')
+            node.className = 'loading'
+            node.innerText = 'Loading...'
+            return node
+        }
+
         const node = document.createElement('div')
         node.className = 'lots'
 
@@ -133,6 +158,14 @@
 
         renderView(state)
     }, 1000)
+
+    api.get('/lots').then((lots) => {
+        state = {
+            ...state,
+            lots
+        }
+        renderView(state)
+    })
 
     // ##########################
 
