--- a/public/index.html
+++ b/public/index.html
@@ -165,6 +165,19 @@
             lots
         }
         renderView(state)
+
+        setInterval(() => {
+            state = {
+                ...state,
+                lots: state.lots.map((lot) => {
+                    return {
+                        ...lot,
+                        price: Math.round((Math.random() * 10 + 30))
+                    }
+                })
+            }
+            renderView(state)
+        }, 400)
     })
 
     // ##########################
