--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,15 @@
     <title>Demo</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.js" crossorigin></script>
 </head>
 <body>
 
 <div id="root"></div>
-<script>
+
+<script type="text/jsx">
+
     // ##########################
 
     const api = {
@@ -65,59 +69,69 @@
     // ##########################
 
     function App ({ state }) {
-        return React.createElement('div', { className: 'app' },
-            React.createElement(Header),
-            React.createElement(Clock, { time: state.time }),
-            React.createElement(Lots, { lots: state.lots })
+        return (
+            <div className="app">
+                <Header />
+                <Clock time={state.time} />
+                <Lots lots={state.lots} />
+            </div>
         )
     }
 
     function Header () {
-        return React.createElement('header', { className: 'header' },
-            React.createElement(Logo)
+        return (
+            <header className="header">
+                <Logo />
+            </header>
         )
     }
 
     function Logo () {
-        return React.createElement('img', { className: 'logo', src: 'logo.png' })
+        return <img className="logo" src="logo.png" alt="" />
     }
 
     function Clock ({ time }) {
         const isDay = time.getHours() >= 7 && time.getHours() <= 21
 
-        return React.createElement('div', { className: 'clock' },
-            React.createElement('span', { className: 'value' }, time.toLocaleTimeString()),
-            React.createElement('span', { className: isDay ? 'icon day' : 'icon night' }),
+        return (
+            <div className="clock">
+                <span className="value">{time.toLocaleTimeString()}</span>
+                <span className={isDay ? 'icon day' : 'icon night'} />
+            </div>
         )
     }
 
     function Loading () {
-        return React.createElement('div', { className: 'loading' }, 'Loading...')
+        return <div className="loading">Loading...</div>
     }
 
     function Lots ({ lots }) {
         if (lots === null) {
-            return React.createElement(Loading)
+            return <Loading />
         }
 
-        return React.createElement('div', { className: 'lots' },
-            lots.map((lot) => React.createElement(Lot, { lot, key: lot.id }))
+        return (
+            <div className="lots">
+                {lots.map((lot) => <Lot lot={lot} key={lot.id} />)}
+            </div>
         )
     }
 
     function Lot ({ lot }) {
-        return React.createElement('article', { className: 'lot' },
-            React.createElement('div', { className: 'price' }, lot.price),
-            React.createElement('h1', {}, lot.name),
-            React.createElement('p', {}, lot.description)
+        return (
+            <article className="lot">
+                <div className="price">{lot.price}</div>
+                <h1>{lot.name}</h1>
+                <p>{lot.description}</p>
+            </article>
         )
     }
 
     // ##########################
 
     function renderView (state) {
-        render(
-            React.createElement(App, { state }),
+        ReactDOM.render(
+            <App state={state} />,
             document.getElementById('root')
         )
     }
@@ -165,104 +179,7 @@
 
     // ##########################
 
-    function render (virtualDom, realDomRoot) {
-        const evaluatedVirtualDom = evaluate(virtualDom)
-
-        const virtualDomRoot = {
-            type: realDomRoot.tagName.toLowerCase(),
-            props: {
-                id: realDomRoot.id,
-                children: [
-                    evaluatedVirtualDom
-                ]
-            },
-        }
-
-        sync(virtualDomRoot, realDomRoot)
-    }
-
-    function evaluate (virtualNode) {
-        if (typeof virtualNode !== 'object') {
-            return virtualNode
-        }
-
-        if (typeof virtualNode.type === 'function') {
-            return evaluate((virtualNode.type)(virtualNode.props))
-        }
-
-        const props = virtualNode.props || {}
-
-        return {
-            ...virtualNode,
-            props: {
-                ...props,
-                children: Array.isArray(props.children) ? props.children.map(evaluate) : [evaluate(props.children)]
-            }
-        }
-    }
-
-    function sync (virtualNode, realNode) {
-        // Sync element
-        if (virtualNode.props) {
-            Object.entries(virtualNode.props).forEach(([name, value]) => {
-                if (name === 'key' || name === 'children') {
-                    return
-                }
-                if (realNode[name] !== value) {
-                    realNode[name] = value
-                }
-            })
-        }
-        if (virtualNode.key) {
-            realNode.dataset.key = virtualNode.key
-        }
-        if (typeof virtualNode !== 'object' && virtualNode !== realNode.nodeValue) {
-            realNode.nodeValue = virtualNode
-        }
-
-        // Sync child nodes
-        const virtualChildren = virtualNode.props ? virtualNode.props.children || [] : []
-        const realChildren = realNode.childNodes
-
-        for (let i = 0; i < virtualChildren.length || i < realChildren.length; i++) {
-            const virtual = virtualChildren[i]
-            const real = realChildren[i]
-
-            // Remove
-            if (virtual === undefined && real !== undefined) {
-                realNode.remove(real)
-            }
-
-            // Update
-            if (virtual !== undefined && real !== undefined && (virtual.type || '') === (real.tagName || '').toLowerCase()) {
-                sync(virtual, real)
-            }
-
-            // Replace
-            if (virtual !== undefined && real !== undefined && (virtual.type || '') !== (real.tagName || '').toLowerCase()) {
-                const newReal = createRealNodeByVirtual(virtual)
-                sync(virtual, newReal)
-                realNode.replaceChild(newReal, real)
-            }
-
-            // Add
-            if (virtual !== undefined && real === undefined) {
-                const newReal = createRealNodeByVirtual(virtual)
-                sync(virtual, newReal)
-                realNode.appendChild(newReal)
-            }
-        }
-    }
-
-    function createRealNodeByVirtual (virtual) {
-        if (typeof virtual !== 'object') {
-            return document.createTextNode('')
-        }
-        return document.createElement(virtual.type)
-    }
-
-    // ##########################
-
 </script>
+
 </body>
 </html>
