Change Callback, Store subscribe

--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,37 @@
 
     // ##########################
 
-    let state = {
+    const initialState = {
         time: new Date(),
         lots: null
     }
+
+    class Store {
+        constructor (initialState) {
+            this.state = initialState
+            this.listeners = []
+        }
+
+        getState () {
+            return this.state
+        }
+
+        subscribe (callback) {
+            this.listeners.push(callback)
+        }
+
+        changeState (diff) {
+            this.state = {
+                ...this.state,
+                ...(typeof diff === 'function' ? diff(this.state) : diff)
+            }
+            this.listeners.forEach((listener) => {
+                listener()
+            })
+        }
+    }
+
+    const store = new Store(initialState)
 
     // ##########################
 
@@ -136,29 +163,27 @@
         )
     }
 
-    renderView(state)
+    store.subscribe(() => {
+        renderView(store.getState())
+    })
+
+    renderView(store.getState())
 
     // ##########################
 
     setInterval(() => {
-        state = {
-            ...state,
+        store.changeState({
             time: new Date()
-        }
-
-        renderView(state)
+        })
     }, 1000)
 
     api.get('/lots').then((lots) => {
-        state = {
-            ...state,
+        store.changeState({
             lots
-        }
-        renderView(state)
+        })
 
         const onPrice = (data) => {
-            state = {
-                ...state,
+            store.changeState((state) => ({
                 lots: state.lots.map((lot) => {
                     if (lot.id === data.id) {
                         return {
@@ -168,8 +193,7 @@
                     }
                     return lot
                 })
-            }
-            renderView(state)
+            }))
         }
 
         lots.forEach((lot) => {
