--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,10 @@
                 <div className="price">{lot.price}</div>
                 <h1>{lot.name}</h1>
                 <p>{lot.description}</p>
+                {lot.favorite
+                    ? <button type="button">Unfavorite</button>
+                    : <button type="button">Favorite</button>
+                }
             </article>
         )
     }
