--- a/public/index.html
+++ b/public/index.html
@@ -172,26 +172,30 @@
 
     // ##########################
 
-    function appReducer (state, action, params) {
-        switch (action) {
-            case 'setTime':
+    const SET_TIME = 'SET_TIME'
+    const SET_LOTS = 'SET_LOTS'
+    const CHANGE_LOT_PRICE = 'CHANGE_LOT_PRICE'
+
+    function appReducer (state, action) {
+        switch (action.type) {
+            case SET_TIME:
                 return {
                     ...state,
-                    time: params.time
+                    time: action.time
                 }
-            case 'setLots':
+            case SET_LOTS:
                 return {
                     ...state,
-                    lots: params.lots
+                    lots: action.lots
                 }
-            case 'changeLotPrice':
+            case CHANGE_LOT_PRICE:
                 return {
                     ...state,
                     lots: state.lots.map((lot) => {
-                        if (lot.id === params.id) {
+                        if (lot.id === action.id) {
                             return {
                                 ...lot,
-                                price: params.price
+                                price: action.price
                             }
                         }
                         return lot
@@ -203,15 +207,22 @@
     }
 
     setInterval(() => {
-        store.setState((state) => appReducer(state, 'setTime', { time: new Date() }))
+        store.setState((state) => appReducer(state, {
+            type: SET_TIME,
+            time: new Date()
+        }))
     }, 1000)
 
     api.get('/lots').then((lots) => {
-        store.setState((state) => appReducer(state, 'setLots', { lots }))
+        store.setState((state) => appReducer(state, {
+            type: SET_LOTS,
+            lots
+        }))
 
         lots.forEach((lot) => {
             stream.subscribe(`price-${lot.id}`, (data) => {
-                store.setState((state) => appReducer(state, 'changeLotPrice', {
+                store.setState((state) => appReducer(state, {
+                    type: CHANGE_LOT_PRICE,
                     id: data.id,
                     price: data.price
                 }))
