--- a/public/index.html
+++ b/public/index.html
@@ -63,22 +63,42 @@
 
     // ##########################
 
-    const initialState = {
-        time: new Date(),
-        lots: null
+    const clockInitialState = {
+        time: new Date()
     }
 
     const SET_TIME = 'SET_TIME'
-    const SET_LOTS = 'SET_LOTS'
-    const CHANGE_LOT_PRICE = 'CHANGE_LOT_PRICE'
 
-    function appReducer (state = initialState, action) {
+    function clockReducer (state = clockInitialState, action) {
         switch (action.type) {
             case SET_TIME:
                 return {
                     ...state,
                     time: action.time
                 }
+            default:
+                return state
+        }
+    }
+
+    function setTime (time) {
+        return {
+            type: SET_TIME,
+            time
+        }
+    }
+
+    // ##########################
+
+    const auctionInitialState = {
+        lots: null
+    }
+
+    const SET_LOTS = 'SET_LOTS'
+    const CHANGE_LOT_PRICE = 'CHANGE_LOT_PRICE'
+
+    function auctionReducer (state = auctionInitialState, action) {
+        switch (action.type) {
             case SET_LOTS:
                 return {
                     ...state,
@@ -102,21 +122,14 @@
         }
     }
 
-    function createSetTimeAction (time) {
-        return {
-            type: SET_TIME,
-            time
-        }
-    }
-
-    function createSetLotsAction (lots) {
+    function setLots (lots) {
         return {
             type: SET_LOTS,
             lots
         }
     }
 
-    function createChangeLotPriceAction (id, price) {
+    function changeLotPrice (id, price) {
         return {
             type: CHANGE_LOT_PRICE,
             id,
@@ -153,7 +166,20 @@
 
     // ##########################
 
-    const store = new Store(appReducer)
+    function combineReducers(reducers) {
+        return (state = {}, action) => {
+            const result = {};
+            Object.entries(reducers).forEach(([key, reducer]) => {
+                result[key] = reducer(state[key], action)
+            })
+            return result
+        }
+    }
+
+    const store = new Store(combineReducers({
+        clock: clockReducer,
+        auction: auctionReducer
+    }))
 
     // ##########################
 
@@ -161,8 +187,8 @@
         return (
             <div className="app">
                 <Header />
-                <Clock time={state.time} />
-                <Lots lots={state.lots} />
+                <Clock time={state.clock.time} />
+                <Lots lots={state.auction.lots} />
             </div>
         )
     }
@@ -234,15 +260,15 @@
     // ##########################
 
     setInterval(() => {
-        store.dispatch(createSetTimeAction(new Date()))
+        store.dispatch(setTime(new Date()))
     }, 1000)
 
     api.get('/lots').then((lots) => {
-        store.dispatch(createSetLotsAction(lots))
+        store.dispatch(setLots(lots))
 
         lots.forEach((lot) => {
             stream.subscribe(`price-${lot.id}`, (data) => {
-                store.dispatch(createChangeLotPriceAction(data.id, data.price))
+                store.dispatch(changeLotPrice(data.id, data.price))
             })
         })
     })
