--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/redux@4/dist/redux.js" crossorigin></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.js" crossorigin></script>
+    <script src="https://unpkg.com/ionicons@5/dist/ionicons/ionicons.esm.js" type="module" crossorigin></script>
 </head>
 <body>
 
 <div id="root"></div>
 
 <script type="text/jsx">
-
     // ##########################
 
     const api = {
@@ -45,6 +45,23 @@
                 default:
                     throw new Error('Unknown address')
             }
+        },
+        post (url) {
+            if (/^\/lots\/(\d+)\/favorite$/.exec(url)) {
+                return new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve({})
+                    }, 500)
+                })
+            }
+            if (/^\/lots\/(\d+)\/unfavorite$/.exec(url)) {
+                return new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve({})
+                    }, 500)
+                })
+            }
+            throw new Error('Unknown address')
         }
     }
 
@@ -97,6 +114,8 @@
 
     const SET_LOTS = 'SET_LOTS'
     const CHANGE_LOT_PRICE = 'CHANGE_LOT_PRICE'
+    const FAVORITE_LOT = 'FAVORITE_LOT'
+    const UNFAVORITE_LOT = 'UNFAVORITE_LOT'
 
     function auctionReducer (state = auctionInitialState, action) {
         switch (action.type) {
@@ -113,6 +132,32 @@
                             return {
                                 ...lot,
                                 price: action.price
+                            }
+                        }
+                        return lot
+                    })
+                }
+            case FAVORITE_LOT:
+                return {
+                    ...state,
+                    lots: state.lots.map((lot) => {
+                        if (lot.id === action.id) {
+                            return {
+                                ...lot,
+                                favorite: true
+                            }
+                        }
+                        return lot
+                    })
+                }
+            case UNFAVORITE_LOT:
+                return {
+                    ...state,
+                    lots: state.lots.map((lot) => {
+                        if (lot.id === action.id) {
+                            return {
+                                ...lot,
+                                favorite: false
                             }
                         }
                         return lot
@@ -138,6 +183,20 @@
         }
     }
 
+    function favoriteLot (id) {
+        return {
+            type: FAVORITE_LOT,
+            id
+        }
+    }
+
+    function unfavoriteLot (id) {
+        return {
+            type: UNFAVORITE_LOT,
+            id
+        }
+    }
+
     // ##########################
 
     const store = Redux.createStore(Redux.combineReducers({
@@ -147,12 +206,12 @@
 
     // ##########################
 
-    function App ({ state }) {
+    function App ({ state, favorite, unfavorite }) {
         return (
             <div className="app">
                 <Header />
                 <Clock time={state.clock.time} />
-                <Lots lots={state.auction.lots} />
+                <Lots lots={state.auction.lots} favorite={favorite} unfavorite={unfavorite} />
             </div>
         )
     }
@@ -184,36 +243,40 @@
         return <div className="loading">Loading...</div>
     }
 
-    function Lots ({ lots }) {
+    function Lots ({ lots, favorite, unfavorite }) {
         if (lots === null) {
             return <Loading />
         }
 
         return (
             <div className="lots">
-                {lots.map((lot) => <Lot lot={lot} key={lot.id} />)}
+                {lots.map((lot) => <Lot lot={lot} favorite={favorite} unfavorite={unfavorite} key={lot.id} />)}
             </div>
         )
     }
 
-    function Lot ({ lot }) {
+    function Lot ({ lot, favorite, unfavorite }) {
         return (
             <article className={'lot' + (lot.favorite ? ' favorite' : '')}>
                 <div className="price">{lot.price}</div>
                 <h1>{lot.name}</h1>
                 <p>{lot.description}</p>
-                <Favorite active={lot.favorite} />
+                <Favorite
+                    active={lot.favorite}
+                    favorite={() => favorite(lot.id)}
+                    unfavorite={() => unfavorite(lot.id)}
+                />
             </article>
         )
     }
 
-    function Favorite ({ active }) {
+    function Favorite ({ active, favorite, unfavorite }) {
         return active ? (
-            <button type="button" className="unfavorite">
+            <button type="button" onClick={unfavorite} className="unfavorite">
                 <ion-icon name="heart-sharp" /> Unfavorite
             </button>
         ) : (
-            <button type="button" className="favorite">
+            <button type="button" onClick={favorite} className="favorite">
                 <ion-icon name="heart-outline" /> Favorite
             </button>
         )
@@ -221,9 +284,21 @@
 
     // ##########################
 
+    const favorite = (id) => {
+        api.post(`/lots/${id}/favorite`).then(() => {
+            store.dispatch(favoriteLot(id))
+        })
+    }
+
+    const unfavorite = (id) => {
+        api.post(`/lots/${id}/unfavorite`).then(() => {
+            store.dispatch(unfavoriteLot(id))
+        })
+    }
+
     function renderView (state) {
         ReactDOM.render(
-            <App state={state} />,
+            <App state={state} favorite={favorite} unfavorite={unfavorite} />,
             document.getElementById('root')
         )
     }
