--- a/public/index.html
+++ b/public/index.html
@@ -284,19 +284,21 @@
 
     // ##########################
 
-    const favorite = (id) => {
-        api.post(`/lots/${id}/favorite`).then(() => {
-            store.dispatch(favoriteLot(id))
-        })
-    }
+    function renderView (store) {
+        const state = store.getState()
 
-    const unfavorite = (id) => {
-        api.post(`/lots/${id}/unfavorite`).then(() => {
-            store.dispatch(unfavoriteLot(id))
-        })
-    }
+        const favorite = (id) => {
+            api.post(`/lots/${id}/favorite`).then(() => {
+                store.dispatch(favoriteLot(id))
+            })
+        }
 
-    function renderView (state) {
+        const unfavorite = (id) => {
+            api.post(`/lots/${id}/unfavorite`).then(() => {
+                store.dispatch(unfavoriteLot(id))
+            })
+        }
+
         ReactDOM.render(
             <App state={state} favorite={favorite} unfavorite={unfavorite} />,
             document.getElementById('root')
@@ -304,10 +306,10 @@
     }
 
     store.subscribe(() => {
-        renderView(store.getState())
+        renderView(store)
     })
 
-    renderView(store.getState())
+    renderView(store)
 
     // ##########################
 
@@ -326,7 +328,6 @@
     })
 
     // ##########################
-
 </script>
 
 </body>
