--- a/public/index.html
+++ b/public/index.html
@@ -286,16 +286,17 @@
 
     function renderView (store) {
         const state = store.getState()
+        const dispatch = store.dispatch
 
         const favorite = (id) => {
             api.post(`/lots/${id}/favorite`).then(() => {
-                store.dispatch(favoriteLot(id))
+                dispatch(favoriteLot(id))
             })
         }
 
         const unfavorite = (id) => {
             api.post(`/lots/${id}/unfavorite`).then(() => {
-                store.dispatch(unfavoriteLot(id))
+                dispatch(unfavoriteLot(id))
             })
         }
 
