--- a/public/index.html
+++ b/public/index.html
@@ -206,12 +206,27 @@
 
     // ##########################
 
-    function App ({ state, favorite, unfavorite }) {
+    function App ({ state, dispatch }) {
+        const time = state.clock.time
+        const lots = state.auction.lots
+
+        const favorite = (id) => {
+            api.post(`/lots/${id}/favorite`).then(() => {
+                dispatch(favoriteLot(id))
+            })
+        }
+
+        const unfavorite = (id) => {
+            api.post(`/lots/${id}/unfavorite`).then(() => {
+                dispatch(unfavoriteLot(id))
+            })
+        }
+
         return (
             <div className="app">
                 <Header />
-                <Clock time={state.clock.time} />
-                <Lots lots={state.auction.lots} favorite={favorite} unfavorite={unfavorite} />
+                <Clock time={time} />
+                <Lots lots={lots} favorite={favorite} unfavorite={unfavorite} />
             </div>
         )
     }
@@ -288,20 +303,8 @@
         const state = store.getState()
         const dispatch = store.dispatch
 
-        const favorite = (id) => {
-            api.post(`/lots/${id}/favorite`).then(() => {
-                dispatch(favoriteLot(id))
-            })
-        }
-
-        const unfavorite = (id) => {
-            api.post(`/lots/${id}/unfavorite`).then(() => {
-                dispatch(unfavoriteLot(id))
-            })
-        }
-
         ReactDOM.render(
-            <App state={state} favorite={favorite} unfavorite={unfavorite} />,
+            <App state={state} dispatch={dispatch} />,
             document.getElementById('root')
         )
     }
