--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,10 @@
 
     // ##########################
 
-    function App ({ state, dispatch }) {
+    function App ({ store }) {
+        const state = store.getState()
+        const dispatch = store.dispatch
+
         const time = state.clock.time
         const lots = state.auction.lots
 
@@ -300,11 +303,8 @@
     // ##########################
 
     function renderView (store) {
-        const state = store.getState()
-        const dispatch = store.dispatch
-
         ReactDOM.render(
-            <App state={state} dispatch={dispatch} />,
+            <App store={store} />,
             document.getElementById('root')
         )
     }
