--- a/public/index.html
+++ b/public/index.html
@@ -210,12 +210,16 @@
 
     // ##########################
 
-    function App ({ store }) {
+    const StoreContext = React.createContext()
+
+    // ##########################
+
+    function App () {
         return (
             <div className="app">
                 <Header />
-                <ClockConnected store={store} />
-                <LotsConnected store={store} />
+                <ClockConnected />
+                <LotsConnected />
             </div>
         )
     }
@@ -232,11 +236,17 @@
         return <img className="logo" src="logo.png" alt="" />
     }
 
-    function ClockConnected ({ store }) {
-        const state = store.getState()
-        const time = state.clock.time
+    function ClockConnected () {
+        return (
+            <StoreContext.Consumer>
+                {(store) => {
+                    const state = store.getState()
+                    const time = state.clock.time
 
-        return <Clock time={time} />
+                    return <Clock time={time} />
+                }}
+            </StoreContext.Consumer>
+        )
     }
 
     function Clock ({ time }) {
@@ -254,41 +264,53 @@
         return <div className="loading">Loading...</div>
     }
 
-    function LotsConnected ({ store }) {
-        const state = store.getState()
-        const lots = state.auction.lots
+    function LotsConnected () {
+        return (
+            <StoreContext.Consumer>
+                {(store) => {
+                    const state = store.getState()
+                    const lots = state.auction.lots
 
-        return <Lots lots={lots} store={store} />
+                    return <Lots lots={lots} />
+                }}
+            </StoreContext.Consumer>
+        )
     }
 
-    function Lots ({ lots, store }) {
+    function Lots ({ lots }) {
         if (lots === null) {
             return <Loading />
         }
 
         return (
             <div className="lots">
-                {lots.map((lot) => <LotConnected lot={lot} store={store} key={lot.id} />)}
+                {lots.map((lot) => <LotConnected lot={lot} key={lot.id} />)}
             </div>
         )
     }
 
-    function LotConnected ({ lot, store }) {
-        const dispatch = store.dispatch
+    function LotConnected ({ lot }) {
+        return (
+            <StoreContext.Consumer>
+                {(store) => {
+                    const dispatch = store.dispatch
 
-        const favorite = (id) => {
-            api.post(`/lots/${id}/favorite`).then(() => {
-                dispatch(favoriteLot(id))
-            })
-        }
+                    const favorite = (id) => {
+                        api.post(`/lots/${id}/favorite`).then(() => {
+                            dispatch(favoriteLot(id))
+                        })
+                    }
 
-        const unfavorite = (id) => {
-            api.post(`/lots/${id}/unfavorite`).then(() => {
-                dispatch(unfavoriteLot(id))
-            })
-        }
+                    const unfavorite = (id) => {
+                        api.post(`/lots/${id}/unfavorite`).then(() => {
+                            dispatch(unfavoriteLot(id))
+                        })
+                    }
 
-        return <Lot lot={lot} favorite={favorite} unfavorite={unfavorite} />
+                    return <Lot lot={lot} favorite={favorite} unfavorite={unfavorite} />
+                }}
+            </StoreContext.Consumer>
+        )
     }
 
     function Lot ({ lot, favorite, unfavorite }) {
@@ -322,7 +344,9 @@
 
     function renderView (store) {
         ReactDOM.render(
-            <App store={store} />,
+            <StoreContext.Provider value={store}>
+                <App />
+            </StoreContext.Provider>,
             document.getElementById('root')
         )
     }
@@ -350,6 +374,7 @@
     })
 
     // ##########################
+
 </script>
 
 </body>
