--- a/public/index.html
+++ b/public/index.html
@@ -214,23 +214,25 @@
 
     // ##########################
 
-    function connect (mapStateToProps, mapDispatchToProps, WrappedComponent) {
-        return (props) => {
-            return (
-                <StoreContext.Consumer>
-                    {(store) => {
-                        const stateToProps = mapStateToProps ? mapStateToProps(store.getState()) : {}
-                        const dispatchToProps = mapDispatchToProps ? mapDispatchToProps(store.dispatch) : {}
-                        return (
-                            <WrappedComponent
-                                {...props}
-                                {...stateToProps}
-                                {...dispatchToProps}
-                            />
-                        )
-                    }}
-                </StoreContext.Consumer>
-            )
+    function connect (mapStateToProps, mapDispatchToProps) {
+        return (WrappedComponent) => {
+            return (props) => {
+                return (
+                    <StoreContext.Consumer>
+                        {(store) => {
+                            const stateToProps = mapStateToProps ? mapStateToProps(store.getState()) : {}
+                            const dispatchToProps = mapDispatchToProps ? mapDispatchToProps(store.dispatch) : {}
+                            return (
+                                <WrappedComponent
+                                    {...props}
+                                    {...stateToProps}
+                                    {...dispatchToProps}
+                                />
+                            )
+                        }}
+                    </StoreContext.Consumer>
+                )
+            }
         }
     }
 
@@ -273,7 +275,7 @@
         time: state.clock.time
     })
 
-    const ClockConnected = connect(clockMapStateToProps, null, Clock)
+    const ClockConnected = connect(clockMapStateToProps)(Clock)
 
     function Loading () {
         return <div className="loading">Loading...</div>
@@ -295,7 +297,7 @@
         lots: state.auction.lots
     })
 
-    const LotsConnected = connect(lotsMapStateToProps, null, Lots)
+    const LotsConnected = connect(lotsMapStateToProps)(Lots)
 
     function Lot ({ lot, favorite, unfavorite }) {
         return (
@@ -325,7 +327,7 @@
         }
     })
 
-    const LotConnected = connect(null, lotMapDispatchToProps, Lot)
+    const LotConnected = connect(null, lotMapDispatchToProps)(Lot)
 
     function Favorite ({ active, favorite, unfavorite }) {
         return active ? (
