--- a/public/index.html
+++ b/public/index.html
@@ -204,10 +204,24 @@
 
     // ##########################
 
-    const store = Redux.createStore(Redux.combineReducers({
-        clock: clockReducer,
-        auction: auctionReducer
-    }))
+    function functionalActionSupport ({ dispatch, getState }) {
+        return function (next) {
+            return function (action) {
+                if (typeof action === 'function') {
+                    return action(dispatch, getState)
+                }
+                return next(action);
+            }
+        }
+    }
+
+    const store = Redux.createStore(
+        Redux.combineReducers({
+            clock: clockReducer,
+            auction: auctionReducer
+        }),
+        Redux.applyMiddleware(functionalActionSupport)
+    )
 
     // ##########################
 
@@ -287,18 +301,22 @@
         )
     }
 
-    const lotMapDispatchToProps = (dispatch) => ({
+    const lotMapDispatchToProps = {
         favorite: (id) => {
-            api.post(`/lots/${id}/favorite`).then(() => {
-                dispatch(favoriteLot(id))
-            })
+            return (dispatch) => {
+                api.post(`/lots/${id}/favorite`).then(() => {
+                    dispatch(favoriteLot(id))
+                })
+            }
         },
         unfavorite: (id) => {
-            api.post(`/lots/${id}/unfavorite`).then(() => {
-                dispatch(unfavoriteLot(id))
-            })
+            return (dispatch) => {
+                api.post(`/lots/${id}/unfavorite`).then(() => {
+                    dispatch(unfavoriteLot(id))
+                })
+            }
         }
-    })
+    }
 
     const LotConnected = ReactRedux.connect(null, lotMapDispatchToProps)(Lot)
 
@@ -340,7 +358,6 @@
     })
 
     // ##########################
-
 </script>
 
 </body>
