Container Clock Use Hook

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/redux@4/dist/redux.js" crossorigin></script>
     <script src="https://unpkg.com/react-redux@7/dist/react-redux.js" crossorigin></script>
     <script src="https://unpkg.com/redux-thunk@2.3.0/dist/redux-thunk.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone@7.12.6/babel.js" crossorigin></script>
     <script src="https://unpkg.com/ionicons@5/dist/ionicons/ionicons.esm.js" type="module" crossorigin></script>
 </head>
 <body>
@@ -221,32 +221,17 @@
         return <img className="logo" src="logo.png" alt="" />
     }
 
-    class ClockContainer extends React.Component {
-        constructor () {
-            super()
-            this.state = {
-                time: new Date()
-            }
-            this.tick = this.tick.bind(this)
-        }
+    function ClockContainer () {
+        const [time, setTime] = React.useState(new Date())
 
-        tick () {
-            this.setState({
-                time: new Date()
-            })
-        }
+        React.useEffect(() => {
+            const interval = setInterval(() => {
+                setTime(new Date())
+            }, 1000)
+            return () => clearInterval(interval)
+        }, [setTime])
 
-        componentDidMount () {
-            this.interval = setInterval(this.tick, 1000)
-        }
-
-        componentWillUnmount () {
-            clearInterval(this.interval)
-        }
-
-        render () {
-            return <Clock time={this.state.time} />
-        }
+        return <Clock time={time} />
     }
 
     function Clock ({ time }) {
