--- a/public/index.html
+++ b/public/index.html
@@ -250,13 +250,15 @@
     }
 
     function Lots ({ lots, load }) {
+        const loaded = lots !== null
+
         React.useEffect(() => {
-            if (lots === null) {
+            if (!loaded) {
                 load()
             }
-        }, [lots])
+        }, [loaded])
 
-        if (lots === null) {
+        if (!loaded) {
             return <Loading />
         }
 
