--- a/public/index.html
+++ b/public/index.html
@@ -249,9 +249,7 @@
         return <div className="loading">Loading...</div>
     }
 
-    function Lots ({ lots, load }) {
-        const loaded = lots !== null
-
+    function Lots ({ lots, loaded, load }) {
         React.useEffect(() => {
             if (!loaded) {
                 load()
@@ -270,7 +268,8 @@
     }
 
     const lotsMapStateToProps = (state) => ({
-        lots: state.auction.lots
+        lots: state.auction.lots,
+        loaded: state.auction.lots !== null
     })
 
     const lotsMapDispatchToProps = {
