--- a/public/index.html
+++ b/public/index.html
@@ -274,15 +274,9 @@
 
     const lotsMapDispatchToProps = {
         load: () => {
-            return (dispatch, getState, { api, stream }) => {
+            return (dispatch, getState, { api }) => {
                 api.get('/lots').then((lots) => {
                     dispatch(setLots(lots))
-
-                    lots.forEach((lot) => {
-                        stream.subscribe(`price-${lot.id}`, (data) => {
-                            dispatch(changeLotPrice(data.id, data.price))
-                        })
-                    })
                 })
             }
         }
@@ -290,7 +284,11 @@
 
     const LotsConnected = ReactRedux.connect(lotsMapStateToProps, lotsMapDispatchToProps)(Lots)
 
-    function Lot ({ lot, favorite, unfavorite }) {
+    function Lot ({ lot, subscribe, favorite, unfavorite }) {
+        React.useEffect(() => {
+            subscribe(lot.id)
+        }, [lot.id])
+
         return (
             <article className={'lot' + (lot.favorite ? ' favorite' : '')}>
                 <div className="price">{lot.price}</div>
@@ -306,6 +304,13 @@
     }
 
     const lotMapDispatchToProps = {
+        subscribe: (id) => {
+            return (dispatch, getState, { stream }) => {
+                stream.subscribe(`price-${id}`, (data) => {
+                    dispatch(changeLotPrice(data.id, data.price))
+                })
+            }
+        },
         favorite: favoriteLotAsync,
         unfavorite: unfavoriteLotAsync
     }
